namespace VehicleModel;

public class Bicycle
{
    
}