namespace VehicleModel;

public class Truck
{
    
}